// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthIndicator proxy status section renders the degraded workloads 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_fzo7do3"
  content={
    <div>
      <strong>
        Degraded
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "health": Object {
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "class": "icon-degraded",
                        "color": "var(--pf-global--warning-color--100)",
                        "icon": [Function],
                        "name": "Degraded",
                        "priority": 3,
                      },
                      "text": "A: 2 / 2 (1 proxy unsynced)",
                    },
                  ],
                  "status": Object {
                    "class": "icon-degraded",
                    "color": "var(--pf-global--warning-color--100)",
                    "icon": [Function],
                    "name": "Degraded",
                    "priority": 3,
                  },
                  "title": "Pod Status",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "class": "icon-na",
                        "color": "var(--pf-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    Object {
                      "status": Object {
                        "class": "icon-na",
                        "color": "var(--pf-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": Object {
                    "class": "icon-na",
                    "color": "var(--pf-global--Color--200)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                  },
                  "title": "Traffic Status (Last 10m)",
                },
              ],
              "statusConfig": Object {
                "status": Object {
                  "class": "icon-na",
                  "color": "var(--pf-global--Color--200)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                },
                "threshold": undefined,
                "title": "Traffic Status (Last 10m)",
                "value": -1,
              },
            },
            "requests": Object {
              "healthAnnotations": Object {},
              "inbound": Object {},
              "outbound": Object {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <ExclamationTriangleIcon
      className="icon-degraded"
      color="var(--pf-global--warning-color--100)"
      noVerticalAlign={false}
      size="sm"
    />
  </span>
</Tooltip>
`;

exports[`HealthIndicator renders healthy 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_fzo7do3"
  content={
    <div>
      <strong>
        Healthy
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "health": Object {
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "class": "icon-healthy",
                        "color": "var(--pf-global--success-color--100)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "A: 1 / 1",
                    },
                    Object {
                      "status": Object {
                        "class": "icon-healthy",
                        "color": "var(--pf-global--success-color--100)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "status": Object {
                    "class": "icon-healthy",
                    "color": "var(--pf-global--success-color--100)",
                    "icon": [Function],
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "title": "Pod Status",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "class": "icon-na",
                        "color": "var(--pf-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    Object {
                      "status": Object {
                        "class": "icon-na",
                        "color": "var(--pf-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": Object {
                    "class": "icon-na",
                    "color": "var(--pf-global--Color--200)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                  },
                  "title": "Traffic Status (Last 10m)",
                },
              ],
              "statusConfig": Object {
                "status": Object {
                  "class": "icon-na",
                  "color": "var(--pf-global--Color--200)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                },
                "threshold": undefined,
                "title": "Traffic Status (Last 10m)",
                "value": -1,
              },
            },
            "requests": Object {
              "healthAnnotations": Object {},
              "inbound": Object {},
              "outbound": Object {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <CheckCircleIcon
      className="icon-healthy"
      color="var(--pf-global--success-color--100)"
      noVerticalAlign={false}
      size="sm"
    />
  </span>
</Tooltip>
`;
